2025-08-29  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add whisper.

2025-08-29  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add clojure-mode and inf-clojure.

2025-08-28  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add eca.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	Remove some eww configuration

	* init.el (eww+miniflux-trim, eww+kagi-trim)
	(eww-reset-current-bookmark): Remove functions.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el (straight-built-in-pseudo-packages): Add `map'.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Change binding of `consult-history' from "C-c h" to
	"C-c H".

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add ement.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	Optimizing startup speed

	* init.el (+init-fontsets): Set `use-default-font-for-symbols' to t.
	(+maybe-init-fontset): 	Ignore errors when initializing fonts.
	(nerd-icons): Set up nerd fonts.
	(buffer-list-update-hook): Do not add `recentf-track-opened-file'
	to `buffer-list-update-hook' on startup.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el (straight-built-in-pseudo-packages): Add built-in packages.

2025-08-22  Zhengyi Fu  <i@fuzy.me>

	* init.el: Auto install `pdf-tools'.

2025-08-22  Zhengyi Fu  <i@fuzy.me>

	Do not use ehelp any more

	* init.el (help-window-select): Set to t.
	Unbind `ehelp-command'.

2025-08-22  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (deepseek-mathematician): New preset.

2025-08-22  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: Add support for DeepSeek V3.1.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (+mail-to-help-gnu-emacs): Change binding to <help> H.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	Use C-h to delete char and adjust relevant settings

	* init.el (meow-setup): Remove ?h.
	Bind C-c h to <help>.
	(global-map): Bind C-M-h to M-DEL.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (global-map): Bind C-h, <help> and <f1> to
	`ehelp-command'.

2025-08-21  Zhengyi Fu  <i@fuzy.me>
